fixed: IE11 layout issues

--- a/src/apps/properties/src/components/WebsiteCreate/WebsiteCreate.less
+++ b/src/apps/properties/src/components/WebsiteCreate/WebsiteCreate.less
@@ -27,7 +27,7 @@
   main {
     border-bottom: 1px solid #f2f4fb;
     padding: 1rem;
-    flex: 1;
+    flex: 1 0 0%;
     h1 {
       font-size: 1.4rem;
       margin-bottom: 0.5rem;
